Kubernetes/1.5/files/svc_backend.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc-backend
spec:
  selector:
    app: backend
  ports:
    - name: backend-svc
      protocol: TCP
      port: 80
      targetPort: 80
