Kubernetes/1.5/files/svc_frontend.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc-frontend
spec:
  selector:
    app: frontend
  ports:
    - name: frontend-svc
      protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
