Kubernetes/1.5/files/ingress2.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-apps
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: "nginx"
  rules:
    - host: microk8s.odincov.ru
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: svc-frontend
                port:
                  name: frontend-port
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: svc-backend
                port:
                  name: backend-port
